--- a/src/templates/components/navbar.html
+++ b/src/templates/components/navbar.html
@@ -67,7 +67,7 @@
     }
 </style> -->
 
-<nav class="bg-red-600 py-3">
+<nav class="bg-blue-900 py-3">
     <div class="container mx-auto flex flex-wrap items-center justify-between">
         <!-- Brand Logo -->
         <a href="/" class="text-white text-lg font-semibold">🐺 PackFinder</a>
@@ -86,18 +86,23 @@
         <!-- Navbar Links -->
         <div class="hidden lg:flex lg:items-center lg:justify-between w-full lg:w-auto" id="navbarNavDropdown">
             <div class="flex flex-col lg:flex-row lg:items-center lg:gap-6">
-                <a href="/about" class="text-white hover:bg-red-700 hover:text-gray-200 px-3 py-2 rounded-md">
+                <a href="/about" class="text-white hover:bg-blue-700 hover:text-gray-200 px-3 py-2 rounded-md">
                     About
                 </a>
                 {% if user.is_authenticated %}
-                <a href="/profile" class="text-white hover:bg-red-700 hover:text-gray-200 px-3 py-2 rounded-md">
+                <a href="/profile" class="text-white hover:bg-blue-700 hover:text-gray-200 px-3 py-2 rounded-md">
                     My Profile
                 </a>
-                <a href="/findpeople" class="text-white hover:bg-red-700 hover:text-gray-200 px-3 py-2 rounded-md">
+                <a href="/findpeople" class="text-white hover:bg-blue-700 hover:text-gray-200 px-3 py-2 rounded-md">
                     Find People
                 </a>
-                <a href="/myroom" class="text-white hover:bg-red-700 hover:text-gray-200 px-3 py-2 rounded-md">
+                <a href="/myroom" class="text-white hover:bg-blue-700 hover:text-gray-200 px-3 py-2 rounded-md">
                     My Room
+                </a>
+                {% endif %}
+                {% if not user.is_authenticated %}
+                <a href="/signup" class="text-white hover:bg-blue-700 hover:text-gray-200 px-3 py-2 rounded-md">
+                    Sign Up
                 </a>
                 {% endif %}
             </div>
