wrote 7 test cases for landing_page

--- a/src/templates/pages/about.html
+++ b/src/templates/pages/about.html
@@ -8,7 +8,7 @@
     </div>
 
     {% block title %}
-    <h1 class="text-center text-blue-900 text-4xl mb-5">🐺 PackFinder</h1>
+    🐺 About
     {% endblock %}
 
     {% block content %}
