--- a/src/templates/components/navbar.html
+++ b/src/templates/components/navbar.html
@@ -71,7 +71,11 @@
     <div class="container mx-auto flex flex-wrap items-center justify-between">
         <!-- Brand Logo -->
         <a href="/" class="text-white text-lg font-semibold">🐺 PackFinder</a>
-
+        <form action="{% url 'search_profiles' %}" method="get">
+            <input type="text" name="q" placeholder="Search...">
+            <button type="submit">Search</button>
+        </form>
+        
         <!-- Mobile Menu Button -->
         <button
             class="text-white inline-flex items-center justify-center p-2 rounded-md focus:outline-none focus:ring-2 focus:ring-inset focus:ring-white lg:hidden"
