--- a/src/templates/registration/password_reset_done.html
+++ b/src/templates/registration/password_reset_done.html
@@ -1,43 +1,15 @@
-<!-- templates/registration/password_reset_done.html -->
-
-<!--
- Created on Sun Oct 09 2022
-
- The MIT License (MIT)
- Copyright (c) 2022 Rohit Geddam, Arun Kumar, Teja Varma, Kiron Jayesh, Shandler Mason
-
- Permission is hereby granted, free of charge, to any person obtaining a copy of this software
- and associated documentation files (the "Software"), to deal in the Software without restriction,
- including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense,
- and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so,
- subject to the following conditions:
-
- The above copyright notice and this permission notice shall be included in all copies or substantial
- portions of the Software.
-
- THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED
- TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL
- THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT,
- TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
--->
-
-
 {% extends 'base.html' %}
 {% load static %}
-
 {% load crispy_forms_tags %}
 
 {% block title %}Email Sent{% endblock %}
 
-
 {% block login %}
-
 <div id="signup-card-container">
-    <div class="card" style="width: 24rem; height: 100vh;">
-
-        <div class="card-body">
-            <h5 class="card-title">Check your inbox.</h5>
-            <p>We've emailed you instructions for setting your password. You should receive the email shortly!</p>
+    <div class="card" style="width: 24rem;">
+        <div class="card-body d-flex flex-column align-items-center">
+            <h3 class="card-title text-center mb-4">Check your inbox</h3>
+            <p class="text-center">We've emailed you instructions for setting your password. You should receive the email shortly!</p>
         </div>
     </div>
 </div>
@@ -45,12 +17,18 @@
 <style>
     #signup-card-container {
         height: 100vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
         background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-        url("{% static 'img/sign-in-background.jpg' %}");
+            url("{% static 'img/image.png' %}");
         background-size: cover;
         background-position: center center;
+    }
 
+    .card {
+        padding: 2rem;
+        box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
     }
 </style>
-
 {% endblock %}
