--- a/src/templates/registration/password_reset_form.html
+++ b/src/templates/registration/password_reset_form.html
@@ -31,33 +31,32 @@
 
 
 {% block login %}
-
-<div id="signup-card-container">
-    <div class="card" style="width: 24rem; height: 100vh;">
-
-        <div class="card-body">
-            <h5 class="card-title">Forgot your password?</h5>
-            <p>Enter your email address below, and we'll email instructions for setting a new one.</p>
-            <form method="post">
-                {% csrf_token %}
-                {{ form|crispy }}
-                <button type="submit" class="btn w-100" style="background: #cc0000; color: white;">Send me
-                    instructions!</button>
-
-            </form>
+<div id="auth-container" class="min-h-screen flex items-center justify-center">
+    <div class="bg-white p-8 rounded-lg shadow-md w-96 transform transition duration-500 hover:scale-105">
+        <h2 class="text-2xl font-bold mb-4 text-blue-900">Forgot Your Password?</h2>
+        <p class="mb-6 text-gray-600">Enter your email address below, and we'll email instructions for setting a new one.</p>
+        
+        <form method="post">
+            {% csrf_token %}
+            {{ form|crispy }}
+            <button type="submit" 
+                    class="w-full py-2 px-4 bg-blue-900 text-white rounded hover:bg-blue-800 transition duration-200">
+                Send Instructions
+            </button>
+        </form>
+        
+        <div class="mt-4 text-center">
+            <a href="{% url 'login' %}" class="text-blue-900 hover:text-blue-700">Back to Login</a>
         </div>
     </div>
 </div>
 
 <style>
-    #signup-card-container {
-        height: 100vh;
+    #auth-container {
         background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-        url("{% static 'img/sign-in-background.jpg' %}");
+            url("{% static 'img/image.png' %}");
         background-size: cover;
         background-position: center center;
-
     }
 </style>
-
 {% endblock %}
