--- a/src/templates/pages/findpeople.html
+++ b/src/templates/pages/findpeople.html
@@ -40,7 +40,7 @@
     <div style="width: 20%;">
         <form method="get">
             {{ filter.form|crispy }}
-            <input class="btn btn-danger w-100" type="submit" value="Wolf Filter" />
+            <input class="btn bg-blue-900 w-100 text-white hover:bg-blue-700" type="submit" value="Wolf Filter" />
         </form>
     </div>
 
