--- a/src/templates/pages/profile_edit.html
+++ b/src/templates/pages/profile_edit.html
@@ -1,8 +1,8 @@
 <!--
- Created on Sun Oct 09 2022
+ Created on Friday 1st November 
 
  The MIT License (MIT)
- Copyright (c) 2022 Rohit Geddam, Arun Kumar, Teja Varma, Kiron Jayesh, Shandler Mason
+ Copyright (c) 2024 Chaitralee Datar, Yash Shah, Ananya Patankar
 
  Permission is hereby granted, free of charge, to any person obtaining a copy of this software
  and associated documentation files (the "Software"), to deal in the Software without restriction,
@@ -63,7 +63,7 @@ Edit Profile
         {% csrf_token %}
         {{ form|crispy }}
         <br>
-        <button class="btn btn-danger" type="submit" id="submit_button">Submit</button>
+        <button class="btn bg-blue-900 text-white hover:bg-blue-700" type="submit" id="submit_button">Submit</button>
       </form>
     </div>
   </div>
