--- a/src/templates/components/navbar.html
+++ b/src/templates/components/navbar.html
@@ -100,7 +100,7 @@
                     My Room
                 </a>
                 <a href="{% url 'user_logout' %}"
-                    class="text-white hover:bg-red-800 hover:text-gray-200 px-3 py-2 rounded-md">
+                    class="text-white hover:bg-blue-700 hover:text-gray-200 px-3 py-2 rounded-md">
                     Logout
                 </a>
                 {% endif %}
