--- a/src/templates/pages/profile.html
+++ b/src/templates/pages/profile.html
@@ -47,7 +47,7 @@ My Profile
 
             </div>
             <div class="card-body">
-                <a href="{% url 'profile_edit' %}" class="btn btn-danger" style="width: 80%;">Edit Profile</a>
+                <a href="{% url 'profile_edit' %}" class="btn bg-blue-900 text-white hover:bg-blue-700" style="width: 80%;">Edit Profile</a>
             </div>
         </div>
     </div>
