changed the complete documentation

--- a/src/templates/pages/about.html
+++ b/src/templates/pages/about.html
@@ -49,7 +49,7 @@
         <!-- Documentation Link -->
         <div>
             <h5 class="text-blue-900 text-xl font-semibold mb-2">Documentation</h5>
-            <a href="https://findmyroomie.readthedocs.io/en/latest/" 
+            <a href="https://PackFinder.readthedocs.io/en/latest/" 
                class="bg-blue-900 text-white px-6 py-2 rounded-md hover:bg-blue-700 transition">
                 Read Documentation
             </a>
