--- a/src/templates/components/navbar.html
+++ b/src/templates/components/navbar.html
@@ -22,7 +22,7 @@
 <!-- <bootstrap class="js"></bootstrap> -->
 
 <!-- <nav class="navbar navbar-expand-lg custom-color__navbar">
-    <a class="navbar-brand" href="/">FindMyRoomie</a>
+    <a class="navbar-brand" href="/">PackFinder</a>
     <a class="nav-link" href="/about">About <span class="sr-only"></span></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
         aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
